--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ mapboxgl.accessToken = 'pk.eyJ1IjoiaGZsZW1pbmciLCJhIjoiY2psMWpkMDVtMWdlaDNwb2Vtc
 var map = new mapboxgl.Map({
     container: 'map', // container id
     style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
-    center: [-74.50, 40], // starting position [lng, lat]
+    center: [-89.26425933837889,
+          48.41917592250883], // starting position [lng, lat]
     zoom: 9 // starting zoom
 });
 </script>
