--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@ var map = new mapboxgl.Map({
     style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
     center: [-89.26425933837889,
           48.41917592250883], // starting position [lng, lat]
-    zoom: 15 // starting zoom
+    zoom: 13 // starting zoom
 });
+    
+map.addControl(new mapboxgl.NavigationControl());
 </script>
 
 </body>
