--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ var map = new mapboxgl.Map({
     zoom: 14 // starting zoom
 });
     
+// Add zoom and rotation controls to the map.    
 map.addControl(new mapboxgl.NavigationControl());
 </script>
 
