--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ p {
 <body>
 
 <div id='map'></div>
-<div class='map-overlay' id='features'><h2>US population density</h2><div id='pd'><p>Hover over a state!</p></div></div>
+<div class='map-overlay' id='features'><h2>CAN population density</h2><div id='pd'><p>Hover over a province or territory!</p></div></div>
 <div class='map-overlay' id='legend'></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiaGZsZW1pbmciLCJhIjoiY2psMWpkMDVtMWdlaDNwb2VtcW4xd2o0aSJ9.IQXGor9fSUGZgT7nbcFjhQ';
