--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ p {
 <div class='map-overlay' id='features'><h2>CAN population density</h2><div id='pd'><p>Hover over a province or territory!</p></div></div>
 <div class='map-overlay' id='legend'></div>
 <script>
-mapboxgl.accessToken = 'pk.eyJ1IjoiaGZsZW1pbmciLCJhIjoiY2psMWpkMDVtMWdlaDNwb2VtcW4xd2o0aSJ9.IQXGor9fSUGZgT7nbcFjhQ';
+mapboxgl.accessToken = 'pk.eyJ1IjoibWFyZW5hYiIsImEiOiJjajV2ajVyZXUwMnN3MzNwNzR3Ynk2cjIyIn0.sI-ynx23EEdpZFbEDu6qjA';
 var map = new mapboxgl.Map({
     container: 'map', // container id
     style: 'mapbox://styles/marenab/cjl2oczit56x42rlxm5adlopg', // stylesheet location
